dataset1235/2025-2/1955397009/users/2540684130/executions/1107611404_48684178.log
== RUN (2025-08-26 11:56:23)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = float(input("total de vendas:"))
lucro = totalDeVendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
total de vendas:435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
total de vendas:210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
total de vendas:60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
total de vendas:135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
total de vendas:165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
total de vendas:568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:55:21)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = totalDeVendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1452.88'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '700.50'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '200.0'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '450.50'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '551.02'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1893.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 11:56:40)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = float(input("total de vendas:"))
lucro = totalDeVendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
total de vendas:435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
total de vendas:210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
total de vendas:60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
total de vendas:135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
total de vendas:165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
total de vendas:568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 11:55:33)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = totalDeVendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1452.88'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '700.50'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '200.0'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '450.50'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '551.02'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1893.99'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:55:04)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = total de vendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:54:51)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_de_vendas = int(input("total de vendas:"))
lucro = total de vendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:55:04)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = total de vendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 11:55:25)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = totalDeVendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1452.88'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '700.50'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '200.0'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '450.50'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '551.02'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1893.99'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:55:05)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = total de vendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:55:02)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = total de vendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:55:05)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = total de vendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 5
    lucro = total de vendas * 30/100
                  ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:54:22)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = input("total de vendas:")
lucro = total de vendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 4
    total de vendas = input("total de vendas:")
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 4
    total de vendas = input("total de vendas:")
          ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 4
    total de vendas = input("total de vendas:")
          ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 4
    total de vendas = input("total de vendas:")
          ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 4
    total de vendas = input("total de vendas:")
          ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 4
    total de vendas = input("total de vendas:")
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 11:55:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = totalDeVendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1452.88'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '700.50'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '200.0'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '450.50'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '551.02'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1893.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 11:55:46)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalDeVendas = int(input("total de vendas:"))
lucro = totalDeVendas * 30/100

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1452.88'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '700.50'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '200.0'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '450.50'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '551.02'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totalDeVendas = int(input("total de vendas:"))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '1893.99'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
